syntax = "proto3";

option csharp_namespace = "Axorith.Contracts";

package axorith;

import "google/protobuf/empty.proto";

// Service for host lifecycle management
service HostManagement {
  // Request graceful shutdown of the host
  rpc RequestShutdown(ShutdownRequest) returns (ShutdownResponse);
  
  // Get current host status
  rpc GetStatus(google.protobuf.Empty) returns (HostStatusResponse);
}

message ShutdownRequest {
  string reason = 1;
  int32 timeout_seconds = 2; // Max time to wait before force shutdown
}

message ShutdownResponse {
  bool accepted = 1;
  string message = 2;
}

message HostStatusResponse {
  string version = 1;
  int64 uptime_seconds = 2;
  int32 active_modules_count = 3;
  bool is_session_running = 4;
  string current_preset_id = 5;
}
